k8s-envoy/frontenvoy-configmap-live.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: frontenvoy-configmap
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: postgres_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15432
        filter_chains:
        - filters:
          - name: envoy.filters.network.postgres_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy
              stat_prefix: egress_postgres
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              stat_prefix: postgres_tcp
              cluster: postgres_cluster
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: acmesolver
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/.well-known/acme-challenge/"
                    route:
                      prefix_rewrite: "/.well-known/acme-challenge/"
                      cluster: acmesolver_cluster
                  - match:
                      prefix: "/"
                    redirect:
                      path_redirect: "/"
                      https_redirect: true
              http_filters:
              - name: envoy.filters.http.router
                typed_config: {}
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8443
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              upgrade_configs: 
                upgrade_type: websocket
                enabled: true
              stat_prefix: ingress_http
              use_remote_address: true
              route_config:
                virtual_hosts:
                - name: homeapp
                  domains:
                  - "esportsmini.com"
                  - "www.esportsmini.com"
                  routes:
                  - match:
                      safe_regex:
                        google_re2: {}
                        regex: ^\/(images|static)\/(.*)?$
                    route:
                      cluster: esm-homeapp
                  - match:
                      prefix: "/"
                    route:
                      prefix_rewrite: "/#"
                      cluster: esm-homeapp
                - name: admin
                  domains:
                  - "live-admin.esportsmini.com"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: esm-admin
                - name: grpcproxy
                  domains:
                  - "live-api.esportsmini.com"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: grpc-web-proxy
                - name: gloader
                  domains:
                  - "live-gloader.esportsmini.com"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: esm-game-loader
                - name: stripe
                  domains:
                  - "live-stripe.esportsmini.com"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: esm-stripe
              http_filters:
              - name: envoy.router
                typed_config: {}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain: 
                      filename: /etc/ssl/envoy/tls.crt
                    private_key: 
                      filename: /etc/ssl/envoy/tls.key
      clusters:
      - name: postgres_cluster
        connect_timeout: 0.25s
        type: strict_dns
        load_assignment:
          cluster_name: postgres_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: pgpool
                    port_value: 9999
      - name: acmesolver_cluster
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: acmesolver_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: certbot
                    port_value: 80
      - name: empty_cluster
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: empty_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: certbot
                    port_value: 3099
      - name: esm-homeapp
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: esm-homeapp
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: esm-homeapp
                    port_value: 80
      - name: esm-admin
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: esm-admin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: esm-admin
                    port_value: 80
      - name: grpc-web-proxy
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: grpc-web-proxy
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: grpc-web-proxy
                    port_value: 80
      - name: esm-game-loader
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: esm-game-loader
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: esm-game-loader
                    port_value: 80
      - name: esm-stripe
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: esm-stripe
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: esm-stripe
                    port_value: 80
